[package]
name = "api"
version = "0.1.0"
edition = "2021"
authors = ["Scuffle <opensource@scuffle.tv>"]
description = "Scuffle API server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
tracing = "0.1.37"
tokio = { version = "1.25.0", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
hyper = { version = "0.14.24", features = ["full"] }
common = { path = "../../common" }
sqlx = { version = "0.6.2", features = ["postgres", "runtime-tokio-rustls", "json", "chrono"] }
routerify = "3.0.0"
serde_json = "1.0.93"

[dev-dependencies]
tempfile = "3.3.0"
dotenvy = "0.15.6"
