[package]
name = "api"
version = "0.1.0"
edition = "2021"
authors = ["Scuffle <opensource@scuffle.tv>"]
description = "Scuffle API server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "api"
path = "src/main.rs"

[[bin]]
# This is a dummy binary to export the GraphQL schema for frontend type generation.
name = "api-gql-generator"
path = "src/gql.nocov.rs"
test = false
bench = false

[dependencies]
anyhow = "1.0.68"
tracing = "0.1.37"
tokio = { version = "1.25.0", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
hyper = { version = "0.14.24", features = ["full"] }
common = { path = "../../common" }
sqlx = { version = "0.6.2", features = ["postgres", "runtime-tokio-rustls", "json", "chrono"] }
routerify = "3.0.0"
serde_json = "1.0.93"
reqwest = { version = "0.11.14", features = ["json", "rustls-tls"], default-features = false }
chrono = { version = "0.4.23", default-features = false, features = ["serde"] }
async-graphql = { version = "5.0.6", features = ["apollo_tracing", "apollo_persisted_queries", "tracing", "opentelemetry", "dataloader", "string_number"] }
hyper-tungstenite = "0.9.0"
async-stream = "0.3.4"
futures = "0.3.26"
futures-util = "0.3.26"
thiserror = "1.0.38"
arc-swap = "1.6.0"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.6"
negative-impl  = "0.1.2"

[dev-dependencies]
tempfile = "3.3.0"
dotenvy = "0.15.6"
http = "0.2.9"
tokio-tungstenite = "0.18.0"
coverage-helper = "0.1"
