[package]
name = "config"
version = "0.1.0"
edition = "2021"
authors = ["Scuffle <opensource@scuffle.tv>"]
description = "Extensible config solution"
repository = "https://github.com/ScuffleTV/scuffle"
categories = ["config"]
keywords = ["config", "cli", "proc-macro"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.40"
serde = { version = "1", features = ["derive", "rc"] }
tracing = { version = "0" }
serde_ignored = "0"
serde-value = "0"
serde_path_to_error = "0"
humantime = "2"
num-order = "1"

# Parsing files
serde_json = "1"
serde_yaml = "0"
toml = "0"

# CLI
clap = { version = "4", features = ["cargo", "string"] }
convert_case = "0"

# Derive macro
config_derive = { path = "../config_derive" }

[[example]]
name = "derive"
path = "examples/derive.rs"
