[package]
name = "config_derive"
version = "0.0.1"
edition = "2021"
authors = ["Scuffle <opensource@scuffle.tv>"]
description = "Extensible config solution"
repository = "https://github.com/ScuffleTV/scuffle"
categories = ["config"]
keywords = ["config", "cli", "proc-macro"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
