[package]
name = "examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[example]]
name = "simple"
path = "src/simple.rs"

[[example]]
name = "http"
path = "src/http.rs"

[[example]]
name = "generics"
path = "src/generics.rs"

[[example]]
name = "http-server"
path = "src/http-server.rs"

[dependencies]
scuffle-foundations = { path = "../", features = ["http3"] }
tracing = "0.1"
tokio = { version = "1", features = ["full"] }

hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "http2"] }
socket2 = "0.5"
http-body-util = "0.1"
opentelemetry = { version = "0.23" }
rand = "0.8"
rustls-pemfile = { version = "2" }
rustls = "0.23"
futures = "0.3.21"
tower = "0.4"
quinn = "0.11"
axum = "0.7"
h3 = "0.0.5"
# h3-webtransport = "0.1"
h3-quinn = "0.0.6"
