[package]
name = "player"
version = "0.1.0"
edition = "2021"
authors = ["Scuffle <opensource@scuffle.tv>"]
description = "Scuffle Video Player"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }
tracing-web = "0.1.2"
tracing = { version = "0.1.37", default-features = false }
tracing-subscriber = { version = "0.3.15", default-features = false, features = ["fmt", "time", "ansi"] }
time = { version = "*", features = ["wasm-bindgen"] }
