[package]
name = "player"
version = "0.1.0"
edition = "2021"
authors = ["Scuffle <opensource@scuffle.tv>"]
description = "Scuffle Video Player"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"
console_error_panic_hook = { version = "0.1.6" }
tracing-web = "0.1.2"
tracing = { version = "0.1.37", default-features = false }
tracing-subscriber = { version = "0.3.15", default-features = false, features = ["fmt", "time", "ansi"] }
time = { version = "0.3.19", features = ["wasm-bindgen"] }
