# You must change these to your own details.
[package]
name = "player-wasm"
description = "Scuffle Video Player"
version = "0.1.0"
authors = ["Troy Benson <troy@scuffle.tv>"]
categories = ["wasm"]
readme = "README.md"
license = "LICENSE.md"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[features]
default = ["wee_alloc"]

[dependencies]
wasm-bindgen = "0"
wee_alloc = { version = "0", optional = true }
web-sys = { version = "0", features = ["console"] }
console_error_panic_hook = "0"

[dev-dependencies]
wasm-bindgen-test = "0"
futures = "0"
js-sys = "0"
wasm-bindgen-futures = "0"
