[package]
name = "scuffle-image-processor-proto"
version = "0.0.0"
edition = "2021"
authors = ["Scuffle <opensource@scuffle.tv>"]
description = "Scuffle Image Processor Protocol Buffers"
license = "MIT OR Apache-2.0"

[dependencies]
prost = "0.12"
tonic = "0.11.0"
pbjson = { version = "0.6.0", optional = true }
serde = { version = "1.0", optional = true }

[build-dependencies]
prost-build = "0.12.4"
tonic-build = "0.11.0"
pbjson-build = { version = "0.6.0", optional = true }

[features]
server = []
client = []
serde = [
    "dep:serde",
    "pbjson-build",
    "pbjson",
]

