[package]
name = "scuffle-image-processor-proto"
version = "0.0.0"
edition = "2021"
authors = ["Scuffle <opensource@scuffle.tv>"]
description = "Scuffle Image Processor Protocol Buffers"
license = "MIT OR Apache-2.0"

[dependencies]
prost = "0.13"
tonic = "0.12"
pbjson = { version = "0.7", optional = true }
serde = { version = "1.0", optional = true }

[build-dependencies]
prost-build = "0.13"
tonic-build = "0.12"
pbjson-build = { version = "0.7", optional = true }

[features]
server = []
client = []
serde = [
    "dep:serde",
    "pbjson-build",
    "pbjson",
]

