[package]
name = "platform-image-processor"
version = "0.0.1"
edition = "2021"
authors = ["Scuffle <opensource@scuffle.tv>"]
description = "Scuffle Image Processor"

[dependencies]
tracing = "0.1.40"
tokio = { version = "1.34.0", features = ["full"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.64"
sqlx = { version = "0.7.2", features = ["postgres", "runtime-tokio", "tls-rustls", "json", "chrono", "uuid"] }
ulid = { version = "1.1.0", features = ["uuid"] }
prost = "0.12.1"
rust-s3 = { git = "https://github.com/durch/rust-s3.git", default-features = false, features = ["tags", "tokio-rustls-tls", "fail-on-err"] }
async-trait = "0.1.74"
anyhow = "1.0.42"
async-nats = "0.33.0"
tonic = "0.10.2"
futures = "0.3.29"
thiserror = "1.0.50"
file-format = "0.23.0"
itertools = "0.12.0"
scopeguard = "1.2.0"
rgb = "0.8.37"
imgref = "1.10.0"
opencv = { version = "0.88.5", default-features = false, features = ["clang-runtime", "imgproc"] }
ffmpeg-next = "6.1.0"
libavif-sys = { version = "0.15.0" }
libwebp-sys2 = { version = "0.1.9", features = ["1_2", "demux", "mux", "static"] }
sha2 = "0.10.8"
byteorder = "1.5.0"
gifski = "1.13.1"
png = "0.17.10"
num_cpus = "1.16.0"

common = { workspace = true, features = ["default"] }
config = { workspace = true }
pb = { workspace = true }
binary-helper = { workspace = true }

[dev-dependencies]
dotenvy = "0.15.7"
tempfile = "3.8.1"
