[package]
name = "platform-image-processor"
version = "0.0.1"
edition = "2021"
authors = ["Scuffle <opensource@scuffle.tv>"]
description = "Scuffle Image Processor"

[dependencies]
tracing = "0.1"
tokio = { version = "1.34", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "tls-rustls", "json", "chrono", "uuid"] }
ulid = { version = "1.1", features = ["uuid"] }
prost = "0.12"
rust-s3 = { git = "https://github.com/durch/rust-s3.git", default-features = false, features = ["tags", "tokio-rustls-tls", "fail-on-err"] }
async-trait = "0.1"
anyhow = "1.0"
async-nats = "0.33"
tonic = "0.10"
futures = "0.3"
thiserror = "1.0"
file-format = "0.23"
itertools = "0.12"
scopeguard = "1.2"
rgb = "0.8"
imgref = "1.10"
opencv = { version = "0.88", default-features = false, features = ["clang-runtime", "imgproc"] }
ffmpeg-next = "6.1"
libavif-sys = { version = "0.15" }
libwebp-sys2 = { version = "0.1", features = ["1_2", "demux", "mux", "static"] }
sha2 = "0.10"
byteorder = "1.5"
gifski = "1.13"
png = "0.17"
num_cpus = "1.16"
path-tree = "0.7"

common = { workspace = true, features = ["default"] }
config = { workspace = true }
pb = { workspace = true }
binary-helper = { workspace = true }

[dev-dependencies]
dotenvy = "0.15.7"
