[package]
name = "video-api"
version = "0.0.1"
edition = "2021"
license = "BSL-1.0"

[[bin]]
name = "video-api"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
anyhow = "1.0"
tonic = { version = "0.10", features = ["tls"] }
prost = "0.12"
uuid = { version = "1.6", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
tokio-stream = { version = "0.1", features = ["sync"] }
async-stream = "0.3"
futures = "0.3"
futures-util = "0.3"
bytes = "1.5"
async-trait = "0.1"
jwt-next = "0.17"
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
async-nats = "0.33"
ulid = "1.1"
hex = "0.4"
base64 = "0.21"
serde_json = "1.0"
fred = { version = "8.0.0", features = ["enable-rustls", "sentinel-client", "dns"] }
url = "2.5"
itertools = "0.12"
tower = "0.4"
http = "=0.2"
hyper = "=0.14"

postgres-from-row = "0.5"
utils = { workspace = true, features = ["all"] }
config = { workspace = true }
pb = { workspace = true }
video-common = { workspace = true }
binary-helper = { workspace = true }

[dev-dependencies]
dotenvy = "0.15"
rand_chacha = "0.3"
