[package]
name = "bytesio"
version = "0.0.1"
edition = "2021"

[features]
tokio = ["dep:tokio-util", "dep:tokio-stream", "dep:tokio", "dep:futures", "dep:common"]
default = ["tokio"]

[dependencies]
byteorder = "1"
bytes = "1"

futures = { version = "0", optional = true }
tokio-util = { version = "0", features = ["codec"], optional = true  }
tokio-stream = { version = "0", optional = true  }
tokio = { version = "1", optional = true  }
common = { path = "../../common", default-features = false, features = ["prelude"], optional = true  }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
