[package]
name = "video-cli"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
clap = { version = "4.4", features = ["derive", "env"] }
ulid = "1.1"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "tls-rustls", "json", "chrono", "uuid"] }
fred = { git = "https://github.com/aembke/fred.rs.git", branch = "feat/unix-sockets", features = ["enable-rustls", "sentinel-client", "dns"] }
async-nats = "0.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
anyhow = { version = "1.0", features = ["backtrace"] }
tonic = "0.10"
futures = "0.3"
futures-util = "0.3"
serde_yaml = "0.9"
base64 = "0.21"

pb = { workspace = true }
config = { workspace = true }
common = { workspace = true }
video-api = { workspace = true }
video-common = { workspace = true }
binary-helper = { workspace = true }
