[package]
name = "video-common"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
sqlx = { version = "0.7.2", features = ["postgres", "runtime-tokio", "tls-rustls", "json", "chrono", "uuid"] }
sqlx-postgres = "0.7.2"
prost = "0.12.1"
uuid = { version = "1.5.0", features = ["v4"] }
ulid = { version = "1.1.0", features = ["uuid"] }
serde = { version = "1.0.192", features = ["derive"] }
chrono = { version = "0.4.31", default-features = false, features = ["serde", "clock"] }
futures = "0.3.29"
futures-util = "0.3.29"
bytes = "1.5.0"
async-graphql = { version = "6.0.10", default-features = false, features = ["dataloader"] }
async-trait = "0.1.74"
async-nats = "0.33.0"

pb = { workspace = true }
common = { workspace = true }
