[package]
name = "video-common"
version = "0.0.1"
edition = "2021"

[dependencies]
tracing = "0.1"
tokio = { version = "1.35", features = ["full"] }
tokio-postgres = { version = "0.7" }
postgres-types = { version = "0.2", features = ["derive"] }
postgres-from-row = { version = "0.5" }
prost = "0.12"
uuid = { version = "1.6", features = ["v4"] }
ulid = { version = "1.1", features = ["uuid"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
futures = "0.3"
futures-util = "0.3"
bytes = "1.5"
async-trait = "0.1"
async-nats = "0.33"

pb = { workspace = true }
common = { workspace = true, features = ["default"] }
