[package]
name = "video-database"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio-native-tls", "json", "chrono", "uuid"] }
sqlx-postgres = "0.7.1"
prost = "0.11.9"
uuid = { version = "1.4.1", features = ["v4"] }
ulid = { version = "1.0.0", features = ["uuid"] }
serde = { version = "1.0.183", features = ["derive"] }
chrono = { version = "0.4.26", default-features = false, features = ["serde", "clock"] }
futures = "0.3.28"
futures-util = "0.3.28"
bytes = "1.4.0"
async-graphql = { version = "6.0.1", default-features = false, features = ["dataloader"] }
async-trait = "0.1.72"

pb = { workspace = true }
