[package]
name = "video-edge"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
tracing = "0.1.40"
rustls = "0.21.8"
rustls-pemfile = "1.0.4"
tokio-rustls = "0.24.1"
tokio = { version = "1.34.0", features = ["full"] }
serde = { version = "1.0.192", features = ["derive"] }
hyper = { version = "0.14.27", features = ["full"] }
tonic = { version = "0.10.2", features = ["tls"] }
chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
prost = "0.12.1"
async-stream = "0.3.5"
futures = "0.3.29"
futures-util = "0.3.29"
bytes = "1.5.0"
async-trait = "0.1.74"
url-parse = "1.0.7"
nix = "0.27.1"
sha2 = "0.10.8"
tokio-util = "0.7.10"
tokio-stream = "0.1.14"
serde_json = "1.0.108"
routerify = "3.0.0"
uuid = { version = "1.5.0", features = ["v4"] }
url = "2.4.1"
async-nats = "0.33.0"
sqlx = { version = "0.7.2", features = ["postgres", "runtime-tokio", "tls-rustls", "json", "chrono", "uuid"] }
sqlx-postgres = "0.7.2"
hmac = "0.12.1"
jwt = { version = "0.16.0", features = ["openssl"] }
openssl = "0.10.59"
ulid = { version = "1.1.0", features = ["uuid", "serde"] }
itertools = "0.11.0"

common = { workspace = true, features = ["default"] }
config = { workspace = true }
pb = { workspace = true }
video-common = { workspace = true }
video-player-types = { workspace = true }

[dev-dependencies]
dotenvy = "0.15.7"
portpicker = "0.1.1"
serial_test = "2.0.0"
tempfile = "3.8.1"
