[package]
name = "video-edge"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "video-edge"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
tracing = "0.1"
rustls = "0.22"
rustls-pemfile = "2.0"
tokio-rustls = "0.25"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
hyper = { version = "1.1", features = ["full"] }
tonic = { version = "0.10", features = ["tls"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
prost = "0.12"
async-stream = "0.3"
futures = "0.3"
futures-util = "0.3"
bytes = "1.5"
async-trait = "0.1"
sha2 = "0.10"
tokio-util = "0.7"
tokio-stream = "0.1"
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4"] }
url = "2.5"
async-nats = "0.33"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "tls-rustls", "json", "chrono", "uuid"] }
sqlx-postgres = "0.7"
hmac = "0.12"
jwt = "0.16"
ulid = { version = "1.1", features = ["uuid", "serde"] }
itertools = "0.12"
thiserror = "1.0"
http-body-util = "0.1"
hyper-util = "0.1"

common = { workspace = true, features = ["default"] }
config = { workspace = true }
pb = { workspace = true }
video-common = { workspace = true }
video-player-types = { workspace = true }
binary-helper = { workspace = true }

[dev-dependencies]
dotenvy = "0.15"
