[package]
name = "video-ingest"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "video-ingest"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
tracing = "0.1.40"
rustls = "0.22.1"
rustls-pemfile = "2.0.0"
tokio-rustls = "0.25.0"
async-trait = "0.1.74"
tokio = { version = "1.35.0", features = ["full"] }
serde = { version = "1.0.193", features = ["derive"] }
hyper = { version = "=0.14.27", features = ["full"] }
tonic = { version = "0.10.2", features = ["tls"] }
prost = "0.12.3"
bytes = "1.5.0"
futures = "0.3.29"
futures-util = "0.3.29"
chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
serde_json = "1.0.108"
uuid = "1.6.1"
ulid = { version = "1.1.0", features = ["uuid"] }
async-stream = "0.3.5"
pnet = "0.34.0"
async-nats = "0.33.0"
tokio-executor-trait = "2.1.1"
tokio-reactor-trait = "1.1.0"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio", "tls-rustls", "json", "chrono", "uuid"] }
sqlx-postgres = "0.7.3"
base64 = "0.21.5"
tokio-stream = "0.1.14"
default-net = "0.21.0"

common = { workspace = true, features = ["default"] }
rtmp = { workspace = true }
bytesio = { workspace = true }
flv = { workspace = true }
transmuxer = { workspace = true }
mp4 = { workspace = true }
aac = { workspace = true }
config = { workspace = true }
pb = { workspace = true }
video-common = { workspace = true }
binary-helper = { workspace = true }

[dev-dependencies]
dotenvy = "0.15.7"
portpicker = "0.1.1"
serial_test = "2.0.0"
tempfile = "3.8.1"
