[package]
name = "video-ingest"
version = "0.0.1"
edition = "2021"
license = "BSL-1.0"

[[bin]]
name = "video-ingest"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
tracing = "0.1"
rustls = "0.23"
rustls-pemfile = "2.0"
tokio-rustls = "0.26"
async-trait = "0.1"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
hyper = { version = "1.1", features = ["full"] }
tonic = { version = "0.11", features = ["tls"] }
prost = "0"
bytes = "1"
futures = "0"
futures-util = "0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde_json = "1.0"
uuid = "1.6"
ulid = { version = "1.1", features = ["uuid"] }
async-stream = "0.3"
async-nats = "0.34"
base64 = "0.22"
tokio-stream = "0.1"
default-net = "0.22"
postgres-from-row = "0.5"

scuffle-utils = { workspace = true, features = ["all"] }
rtmp = { workspace = true }
bytesio = { workspace = true }
flv = { workspace = true }
transmuxer = { workspace = true }
mp4 = { workspace = true }
aac = { workspace = true }
config = { workspace = true }
pb = { workspace = true }
video-common = { workspace = true }
binary-helper = { workspace = true }

[dev-dependencies]
dotenvy = "0.15.7"
portpicker = "0.1.1"
